--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html><body><p>Links</p></body></html>
 
 
-<a href="FindingTinyFacesTutorial1.html">Visit W3Schools</a>
+<a href="FindingTinyFacesTutorial1.html"> Finding Tiny Faces in the Wild with Generative Adversarial Network </a>
