--- a/Programme_presentations.htm
+++ b/Programme_presentations.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1">
-<meta name=Generator content="Microsoft Word 15 (filtered)">
+<meta http-equiv=Content-Type content="text/html; charset=iso-8859-1">
+
 <style>
 <!--
  /* Font Definitions */
